--- a/reseni/style.css
+++ b/reseni/style.css
@@ -1,4 +1,47 @@
 *, ::after, ::before { box-sizing: border-box; }
-body {
+body{
     background-color: #f5f5f5;
+    font-family: 'Merriweather', serif;
+    font-weight: 300;
+    font-size: 13px;
+    margin: 0 auto;   
+    line-height: 20px;
+}
+h1{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    margin: 0;
+}
+h2{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500; 
+}
+header{
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 
+    url('images/island-hlavicka.jpg');
+    background-position: center;
+    background-size: cover;
+    color: white;
+    padding: 2rem;
+    text-align: center;
+}
+.podpis{
+    color: rgba(240, 236, 236, 0.8);
+    font-style: italic;
+}
+.obsah li{
+    display: block;
+    text-align: center;
+    list-style-type: none;
+    text-transform: uppercase;
+    color: rgb(202, 204, 204);
+}
+.obsah a{
+     text-decoration: none;
+}
+.obsah a:link{
+    color:rgb(202, 204, 204);
+}
+#uvodni{
+    padding: 1rem;
 }
