--- a/reseni/style.css
+++ b/reseni/style.css
@@ -177,7 +177,52 @@ footer{
 }
     /*VERZE L*/
 @media (min-width: 1025px) {
-
-   /* width: calc(100%/3);   
-        display: block; */
+    header{
+        padding: 2rem 10rem 2rem 10rem;
+        height: 330px;
+    }
+    h1{
+        font-size: 40px;
+    }
+    header p{
+        padding-top: 1.5rem;
+    }
+    .celek{
+        background-color:#f5f5f5;
+        max-width: 960px;
+        margin: 0 auto;
+        position: relative;
+        top: -57px;
+        box-shadow: rgb(145, 143, 143) 1px 1px 10px;
+        padding-top: 2rem;
+    }
+    .obsah{
+        display: flex;
+        margin: 0;
+        padding-left: 0.7rem;
+    }
+    ul{
+        display: flex;
+        flex-direction: column;
+        height: 90px;
+    }
+    .uznevim{
+        display: flex;
+    }
+    .obsah li{
+        text-align: left;
+        width: 9rem;
+        border: none;
+        border-bottom: rgb(202, 204, 204) solid 0.8px;        
+    }
+    .nevimdve{
+        width: 70%;   
+    }
+    .nevimtri{
+        padding-left: 15rem;
+    }
+    .img{
+        width: calc(100%/3);   
+        display: block; 
+    }
 }
